order-cancellation/demo/auditor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-auditor
  labels:
    app: order-auditor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-auditor
  template:
    metadata:
      labels:
        app: order-auditor
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "order-auditor"
        dapr.io/port: "3001"
        dapr.io/config: "tracing"
        dapr.io/protocol: "http"
        dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: auditor
        image: mchmarny/auditor:v0.1.7
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
