order-cancellation/demo/function.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditor
  labels:
    app: auditor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auditor
  template:
    metadata:
      labels:
        app: auditor
      annotations:
        dapr.io/enabled: "true"
        dapr.io/id: "auditor"
        dapr.io/port: "3001"
        dapr.io/config: "tracing"
        dapr.io/protocol: "http"
        dapr.io/log-as-json: "true"
    spec:
      containers:
      - name: auditor
        image: mchmarny/auditor:v0.1.7
        ports:
        - containerPort: 3001
        imagePullPolicy: Always
